unpackaged/main/default/objects/Activity/fields/Account_Objective__c.field-meta.xml
<CustomField>
    <fullName>Account_Objective__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Objective</label>
    <referenceTo>Account_Objective__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>