unpackaged/main/default/objects/Activity/fields/Account_Review__c.field-meta.xml
<CustomField>
    <fullName>Account_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Review</label>
    <type>Checkbox</type>
</CustomField>