unpackaged/main/default/objects/Activity/fields/Action_3rd_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Action_3rd_Quarter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Action 3rd Quarter</label>
    <referenceTo>Action_3rd_Quarter__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>