unpackaged/main/default/objects/Activity/fields/Advanced__c.field-meta.xml
<CustomField>
    <fullName>Advanced__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Cultural Training</inlineHelpText>
    <label>Advanced</label>
    <type>Checkbox</type>
</CustomField>