unpackaged/main/default/objects/Activity/fields/B2C_Consultancy__c.field-meta.xml
<CustomField>
    <fullName>B2C_Consultancy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>B2C Consultancy</label>
    <type>Checkbox</type>
</CustomField>