unpackaged/main/default/objects/Activity/fields/Complete_Related_Objective_and_Actions__c.field-meta.xml
<CustomField>
    <fullName>Complete_Related_Objective_and_Actions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Complete Related Actions</label>
    <type>Checkbox</type>
</CustomField>