unpackaged/main/default/objects/Activity/fields/Consultancy__c.field-meta.xml
<CustomField>
    <fullName>Consultancy__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Upselling and B2C Consultancy Training</inlineHelpText>
    <label>Consultancy</label>
    <type>Checkbox</type>
</CustomField>