unpackaged/main/default/objects/Activity/fields/Contract_Negotiation__c.field-meta.xml
<CustomField>
    <fullName>Contract_Negotiation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Negotiation</label>
    <type>Checkbox</type>
</CustomField>