unpackaged/main/default/objects/Activity/fields/Core__c.field-meta.xml
<CustomField>
    <fullName>Core__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Hit Rate, Match Rate, Issue Rate and other Trainings which involve core TF and DCC concepts processes.  For Payments this will include QR codes, showing the smartphone, scanning the QR code, etc.</inlineHelpText>
    <label>Core</label>
    <type>Checkbox</type>
</CustomField>