unpackaged/main/default/objects/Activity/fields/Creators_Location__c.field-meta.xml
<CustomField>
    <fullName>Creators_Location__c</fullName>
    <formula>Owner:User.Country</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Creators Location</label>
    <type>Text</type>
</CustomField>