unpackaged/main/default/objects/Activity/fields/Cultural__c.field-meta.xml
<CustomField>
    <fullName>Cultural__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cultural</label>
    <type>Checkbox</type>
</CustomField>