unpackaged/main/default/objects/Activity/fields/Current_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Current_Assigned__c</fullName>
    <formula>IF(Owner:User.Id  = $User.Id , 1 , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Assigned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>