unpackaged/main/default/objects/Activity/fields/Deliver_Materials__c.field-meta.xml
<CustomField>
    <fullName>Deliver_Materials__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deliver Materials</label>
    <type>Checkbox</type>
</CustomField>