unpackaged/main/default/objects/Activity/fields/Diagnostic__c.field-meta.xml
<CustomField>
    <fullName>Diagnostic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Diagnostic</label>
    <type>Checkbox</type>
</CustomField>