unpackaged/main/default/objects/Activity/fields/Early_Stage_Discussions__c.field-meta.xml
<CustomField>
    <fullName>Early_Stage_Discussions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Early Stage Discussions</label>
    <type>Checkbox</type>
</CustomField>