unpackaged/main/default/objects/Activity/fields/Fallback__c.field-meta.xml
<CustomField>
    <fullName>Fallback__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fallback</label>
    <type>Checkbox</type>
</CustomField>