unpackaged/main/default/objects/Activity/fields/Forms_Rebranded__c.field-meta.xml
<CustomField>
    <fullName>Forms_Rebranded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Forms Rebranded</label>
    <type>Checkbox</type>
</CustomField>