unpackaged/main/default/objects/Activity/fields/Hit_Rate__c.field-meta.xml
<CustomField>
    <fullName>Hit_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hit Rate</label>
    <type>Checkbox</type>
</CustomField>