unpackaged/main/default/objects/Activity/fields/How_Many_Trained__c.field-meta.xml
<CustomField>
    <fullName>How_Many_Trained__c</fullName>
    <label>How Many Trained?</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>