unpackaged/main/default/objects/Activity/fields/Initial_Contact__c.field-meta.xml
<CustomField>
    <fullName>Initial_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Initial Contact</label>
    <type>Checkbox</type>
</CustomField>