unpackaged/main/default/objects/Activity/fields/Issue_Rate__c.field-meta.xml
<CustomField>
    <fullName>Issue_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Issue Rate</label>
    <type>Checkbox</type>
</CustomField>