unpackaged/main/default/objects/Activity/fields/IT_Solutions_Rebranded__c.field-meta.xml
<CustomField>
    <fullName>IT_Solutions_Rebranded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IT Solutions Rebranded</label>
    <type>Checkbox</type>
</CustomField>