unpackaged/main/default/objects/Activity/fields/Maintain_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Maintain_Relationship__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Maintain Relationship</label>
    <type>Checkbox</type>
</CustomField>