unpackaged/main/default/objects/Activity/fields/Match_Rate__c.field-meta.xml
<CustomField>
    <fullName>Match_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Match Rate</label>
    <type>Checkbox</type>
</CustomField>