unpackaged/main/default/objects/Activity/fields/Merchant_Account_Plan1__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Account_Plan1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Merchant Account Plan</label>
    <referenceTo>Merchant_Account_Plan__c</referenceTo>
    <relationshipLabel>Related Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>