unpackaged/main/default/objects/Activity/fields/Merchant_On_Boarding__c.field-meta.xml
<CustomField>
    <fullName>Merchant_On_Boarding__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>For new merchants and new store/market openings.</inlineHelpText>
    <label>Merchant On Boarding</label>
    <type>Checkbox</type>
</CustomField>