unpackaged/main/default/objects/Activity/fields/Mystery_Shopping_Result__c.field-meta.xml
<CustomField>
    <fullName>Mystery_Shopping_Result__c</fullName>
    <label>Mystery Shopping Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>