unpackaged/main/default/objects/Activity/fields/Negotiation__c.field-meta.xml
<CustomField>
    <fullName>Negotiation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Negotiation</label>
    <type>Checkbox</type>
</CustomField>