unpackaged/main/default/objects/Activity/fields/OTELLO__c.field-meta.xml
<CustomField>
    <fullName>OTELLO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OTELLO</label>
    <type>Checkbox</type>
</CustomField>