unpackaged/main/default/objects/Activity/fields/Owning_Country__c.field-meta.xml
<CustomField>
    <fullName>Owning_Country__c</fullName>
    <formula>TEXT(Owner:User.Sales_Country__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owning Country</label>
    <type>Text</type>
</CustomField>