unpackaged/main/default/objects/Activity/fields/Present_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Present_Proposal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Present Proposal</label>
    <type>Checkbox</type>
</CustomField>