unpackaged/main/default/objects/Activity/fields/Proposal_Development__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Development__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proposal Development</label>
    <type>Checkbox</type>
</CustomField>