unpackaged/main/default/objects/Activity/fields/Proposal_Signing__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Signing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proposal Signing</label>
    <type>Checkbox</type>
</CustomField>