unpackaged/main/default/objects/Activity/fields/Sales_Country__c.field-meta.xml
<CustomField>
    <fullName>Sales_Country__c</fullName>
    <formula>TEXT(Owner:User.Sales_Country__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Country</label>
    <type>Text</type>
</CustomField>