unpackaged/main/default/objects/Activity/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <label>Topic</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contract Issue</fullName>
            </value>
            <value>
                <fullName>Contract Negotiation</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Marketing Materials</fullName>
            </value>
            <value>
                <fullName>Marketing Products</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Presentation</fullName>
            </value>
            <value>
                <fullName>Service Issue</fullName>
            </value>
            <value>
                <fullName>Statistics/Reporting</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>TF – Installation</fullName>
            </value>
            <value>
                <fullName>TF – Incentive</fullName>
            </value>
            <value>
                <fullName>TF – Compliance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>