unpackaged/main/default/objects/Activity/fields/Training_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Training_Attendees__c</fullName>
    <label>Training Attendees</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>