unpackaged/main/default/objects/Activity/fields/Training_Feedback_Forms__c.field-meta.xml
<CustomField>
    <fullName>Training_Feedback_Forms__c</fullName>
    <inlineHelpText>How many training feedback forms were received regarding this training?</inlineHelpText>
    <label>Training Feedback Forms</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>