unpackaged/main/default/objects/Activity/fields/Training_Last_12M__c.field-meta.xml
<CustomField>
    <fullName>Training_Last_12M__c</fullName>
    <formula>IF(AND(ActivityDate  &gt;= TODAY() - 90,  RecordType.Name = &quot;Training&quot;), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Training Last 3M</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>