unpackaged/main/default/objects/Activity/fields/Upselling__c.field-meta.xml
<CustomField>
    <fullName>Upselling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Upselling</label>
    <type>Checkbox</type>
</CustomField>