unpackaged/main/default/objects/Activity/fields/Visit_Count__c.field-meta.xml
<CustomField>
    <fullName>Visit_Count__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>