unpackaged/main/default/objects/Activity/fields/Visit_Last_12M__c.field-meta.xml
<CustomField>
    <fullName>Visit_Last_12M__c</fullName>
    <formula>IF(ActivityDate  &gt;=  TODAY() - 90, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Visit Last 3M</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>