unpackaged/main/default/objects/Activity/listViews/My_Team_s_Activities.listView-meta.xml
<ListView>
    <fullName>My_Team_s_Activities</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>TASK.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Team</filterScope>
    <label>My Team&#39;s Activities</label>
    <language>en_US</language>
</ListView>