unpackaged/main/default/objects/Activity/listViews/My_Teams_Open_Activities.listView-meta.xml
<ListView>
    <fullName>My_Teams_Open_Activities</fullName>
    <filterScope>Team</filterScope>
    <filters>
        <field>TASK.STATUS</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>My Team&#39;s Open Activities</label>
    <language>en_US</language>
</ListView>