unpackaged/main/default/objects/Activity/listViews/MyDelegatedActivities.listView-meta.xml
<ListView>
    <fullName>MyDelegatedActivities</fullName>
    <filterScope>Delegated</filterScope>
    <filters>
        <field>TASK.STATUS</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>My Delegated Activities</label>
    <language>en_US</language>
</ListView>