unpackaged/main/default/objects/Activity/listViews/POS_Support_GB_Tasks.listView-meta.xml
<ListView>
    <fullName>POS_Support_GB_Tasks</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>TASK.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>TASK.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER_ROLE</field>
        <operation>equals</operation>
        <value>POS Support GB</value>
    </filters>
    <label>POS Support GB Tasks</label>
    <language>en_US</language>
    <sharedTo>
        <role>POS_Support_GB</role>
        <role>POS_Support_Management</role>
    </sharedTo>
</ListView>